--- a/index.html
+++ b/index.html
@@ -361,11 +361,11 @@
               </li>
               <li class="sb-course js-course">
                 <span class="sb__inner">
-                  今天真漂亮</span><!-- .sb__inner -->
+                  你真漂亮</span><!-- .sb__inner -->
               </li>
               <li class="sb-course js-course">
                 <span class="sb__inner">
-                  遇见你好幸运 </span><!-- .sb__inner -->
+                  遇见你真好 </span><!-- .sb__inner -->
               </li>
               <li class="sb-course js-course">
                 <span class="sb__inner">
@@ -380,7 +380,7 @@
               </li>
               <li class="sb-course js-course">
                 <span class="sb__inner">
-                  你真的好棒啊 </span><!-- .sb__inner -->
+                  你好棒啊 </span><!-- .sb__inner -->
               </li>
               <li class="sb-course js-course">
                 <span class="sb__inner">
@@ -834,7 +834,7 @@
 
           <div class="s__ruler js-ruler"></div>
 
-          <a class="btn-cta s__cta btn-cta--plain btn-cta--secondary btn-cta--lg" href="login_in/login.html" 
+          <a class="btn-cta s__cta btn-cta--plain btn-cta--secondary btn-cta--lg" href="login_in/login.html"
             data-plr-component="btn-cta">
             <span class="btn-cta__inner"> 进入 </span>
 
@@ -938,7 +938,7 @@
                 <!-- .sb__content -->
 
                 <footer class="sb__footer">
-                  <a class="btn-cta sb__tier__cta btn-cta--plain btn-cta--secondary btn-cta--lg" href="#" 
+                  <a class="btn-cta sb__tier__cta btn-cta--plain btn-cta--secondary btn-cta--lg" href="#"
                     onclick="return false;" data-plr-component="btn-cta" style="
                         pointer-events: none;
                         cursor: not-allowed;
@@ -983,16 +983,17 @@
                     <p style="text-indent: 2em; margin: 0;">
                       有些连接像 UDP,产生于一瞬的触发,发出即算完成,不等待回应,也不确认是否真正抵达,它追求的是速度与释放,把一切交给概率与当下,于是明亮、直接、毫无保留,却也随时可能在噪声中消散；而有些连接更像
                       TCP,它从不轻易开始,必须经过三次握手般的试探、回应与确认,先确定彼此在线,再确认方向一致,最后才愿意建立通道。 </p>
-                      <p style="text-indent: 2em; margin: 0;">
-                         TCP
+                    <p style="text-indent: 2em; margin: 0;">
+                      TCP
                       不相信偶然的到达,它为每一次发送编号,为顺序负责,也为完整承担代价,即便中途出现延迟、丢失或错位,也会选择暂停、回退、重传,把已经散乱的内容一点点校正回来。UDP 接受缺失,因此轻盈而迅速;TCP
                       拒绝缺失,所以缓慢而笃定。
-                      </p>
-                      <p style="text-indent: 2em; margin: 0;"> 人们常被 UDP
-                      的果断与亮度吸引,把瞬间的强度误认为全部意义,却忽略了那些未被接收的空白；而真正能穿越噪声与距离的,从来不是一次成功的发送,而是愿意在失败后继续确认,在沉默中保持连接,在世界反复中仍然选择重来。<b style="color: #FF55F8;">到最后,速度不再重要,重要的是那条始终未断的通道,仍在静默中传输着完整而有序的存在。</b>
-                      </p>
-                     
-                   
+                    </p>
+                    <p style="text-indent: 2em; margin: 0;"> 人们常被 UDP
+                      的果断与亮度吸引,把瞬间的强度误认为全部意义,却忽略了那些未被接收的空白；而<b
+                        style="color: #FF55F8;">真正能穿越噪声与距离的,从来不是一次成功的发送,而是愿意在失败后继续确认,在沉默中保持连接,在世界反复中仍然选择重来。</b>到最后,速度不再重要,重要的是那条始终未断的通道,仍在静默中传输着完整而有序的存在。
+                    </p>
+
+
 
                   </ul>
                 </div>
@@ -1307,7 +1308,7 @@
               <dd class="sb__answer js-answer">
                 <span class="sb__answer__outer">
                   <span class="sb__answer__inner">
-                    因为剩下的···嗯···嗯···嗯···,需要我亲自去跟ta说。
+                    因为剩下的冷笑话,需要我亲自去跟ta说。
                   </span>
                 </span>
               </dd>
@@ -1328,7 +1329,7 @@
           <div class="s__intro js-intro">
             <div class="s__intro__text t-title js-intro-title">
               别睡着了
-<br>这不是尽头
+              <br>这不是尽头
             </div>
             <!-- .s__intro__text -->
           </div>
@@ -1341,7 +1342,7 @@
               </h2>
 
 
-              <a class="btn-cta s__cta js-cta btn-cta--plain btn-cta--primary btn-cta--2xl" href="login_in/login.html" 
+              <a class="btn-cta s__cta js-cta btn-cta--plain btn-cta--primary btn-cta--2xl" href="login_in/login.html"
                 data-plr-component="btn-cta">
                 <span class="btn-cta__inner"> 立即进入 </span>
                 <span class="btn-cta__ruler js-ruler"></span>
