--- a/login_in/index.html
+++ b/login_in/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -74,12 +75,12 @@
             <div id="particles"></div>
             <!--社交媒体链接-->
             <div class="social-media-links">
-                <a  href="https://www.douyin.com/user/MS4wLjABAAAA0XSGvjUy5BlndvX32Q6wvQIakUDCcIov3_VxU9OOV54?from_tab_name=main" target="_blank"
-                    ><img src="./images/抖音.png" class="social-media" alt="douyin-logo"></a>
-                <a href="https://www.youtube.com/@Riskermo" target="_blank"
-                    ><img src="images/youtube.png" class="social-media" alt="youtube-logo"></a>
-                <a href="https://x.com/bobbob1571370" target="_blank"
-                    ><img src="images/推特.svg" class="social-media" alt="twitter-logo"></a>
+                <a href="https://www.douyin.com/user/MS4wLjABAAAA0XSGvjUy5BlndvX32Q6wvQIakUDCcIov3_VxU9OOV54?from_tab_name=main"
+                    target="_blank"><img src="./images/抖音.png" class="social-media" alt="douyin-logo"></a>
+                <a href="https://www.youtube.com/@Riskermo" target="_blank"><img src="images/youtube.png"
+                        class="social-media" alt="youtube-logo"></a>
+                <a href="https://x.com/bobbob1571370" target="_blank"><img src="images/推特.svg" class="social-media"
+                        alt="twitter-logo"></a>
             </div>
             <!--社交媒体链接结束-->
             <div class="header-content">
@@ -362,7 +363,7 @@
                             <div class="seo-progress wow">84%</div>
                         </div>
                     </div>
-                   
+
                 </div>
             </div>
             <!--copyright-section You Can Remove After Downloading-->
@@ -417,7 +418,7 @@
                     <div class="portfolio-text">
                         <h2>科技日常</h2>
                         <p>分享数码产品的实用技巧，拆解前沿技术的生活化应用，记录智能工具带来的小改变，让硬核科技融入日常，感受科技温度。</p>
-                        <div class="button"><a href="./link/test.html" target="_blank" ><button><span
+                        <div class="button"><a href="./link/test.html" target="_blank"><button><span
                                         class="index">进入专区<i class="gg-arrow-right"></i></span></button></a></div>
                     </div>
                 </div>
@@ -440,8 +441,8 @@
                     <div class="portfolio-text">
                         <h2>行走日常</h2>
                         <p>捕捉路上的细碎美好：街角咖啡馆的午后阳光，陌生城市的小巷烟火，公园长椅上的观察笔记，让脚步与风景碰撞出故事。</p>
-                        <div class="button"><a href="./link/test.html" ><button><span
-                                        class="index">进入专区<i class="gg-arrow-right"></i></span></button></a></div>
+                        <div class="button"><a href="./link/test.html"><button><span class="index">进入专区<i
+                                            class="gg-arrow-right"></i></span></button></a></div>
                     </div>
                 </div>
                 <div class="portfolio portfolio-fourth">
@@ -502,8 +503,8 @@
             </div>
 
             <div class="blog-content">
-                                <div class="blogs">
-                    <a href="./game/Christmas/index.html" target="_blank" >
+                <div class="blogs">
+                    <a href="./game/Christmas/index.html" target="_blank">
                         <div class="img">
                             <img src="images/圣诞.webp" alt="blog-six">
                             <div class="blog-date">浪漫</div>
@@ -616,7 +617,7 @@
                             <p>
                                 <strong style="color: #28bb68; font-size: 23px;">对弈之间，尽显智慧与策略</strong>
                                 <br>
-                               黑白交错中，双方轮流落子，率先连成五颗同色棋子者胜。规则简单，却蕴含无尽变化与思考乐趣。
+                                黑白交错中，双方轮流落子，率先连成五颗同色棋子者胜。规则简单，却蕴含无尽变化与思考乐趣。
 
                             </p>
                         </div>
@@ -856,6 +857,11 @@
         style="position: fixed; bottom: 20px; right: 20px; width: 50px; height: 50px; cursor: pointer; z-index: 1000; transition: all 0.3s ease; border-radius: 50%; box-shadow: 0 2px 10px rgba(0,0,0,0.2);">
     <script>
         const musicFiles = [
+            '爱你.mp3',
+            '出现又离开.mp3',
+            '少年.mp3',
+            '最初的记忆.mp3',
+            '盲选.mp3',
             '最好的我.mp3',
             '去年夏天.mp3',
             '鱼仔.mp3',
