--- a/login_in/index.html
+++ b/login_in/index.html
@@ -857,6 +857,16 @@
         style="position: fixed; bottom: 20px; right: 20px; width: 50px; height: 50px; cursor: pointer; z-index: 1000; transition: all 0.3s ease; border-radius: 50%; box-shadow: 0 2px 10px rgba(0,0,0,0.2);">
     <script>
         const musicFiles = [
+            '夜空中最亮的星.mp3',
+            '送你一朵小红花.mp3',
+            '在你的身边.mp3',
+            '谁.mp3',
+            '那女孩对我说.mp3',
+            '体面.mp3',
+            '蒲公英的约定.mp3',
+            '最好的安排.mp3',
+            '可不可以.mp3',
+            '我们俩.mp3',
             '爱你.mp3',
             '出现又离开.mp3',
             '少年.mp3',
