--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 </head>
 
 <body class="home wp-singular page-template-default page page-id-8 wp-theme-creatorspc">
-  <audio id="bgMusic" src="login_in\link\music\盲选.mp3" loop preload="auto"></audio>
+<audio id="bgMusic" src="login_in/link/music/盲选.mp3" loop preload="auto"></audio>
 
   <script>
     (function () {
@@ -190,7 +190,56 @@
 
     <main class="l-front-page" data-plr-layout="front-page" data-lg-page="">
       <div class="s-hero-home" data-plr-component="s-hero-home" id="hero"
-        data-images='["https:\/\/247artists.com\/wp-content\/uploads\/2025\/02\/Gabrielle-Current-Release-Secured-720x720.jpg","https:\/\/247artists.com\/wp-content\/uploads\/2025\/02\/Kelle-720x720.jpg","https:\/\/247artists.com\/wp-content\/uploads\/2025\/02\/Kennedy-Ryon-720x720.jpg","https:\/\/247artists.com\/wp-content\/uploads\/2025\/02\/Mannywellz-Release-Secured-720x720.jpg","https:\/\/247artists.com\/wp-content\/uploads\/2025\/02\/Trey-Kams-Release-Secured-720x720.jpeg","https:\/\/247artists.com\/wp-content\/uploads\/2025\/02\/King-Cooley-Release-Secured-720x720.jpg","https:\/\/247artists.com\/wp-content\/uploads\/2025\/02\/Austin-Brown-Release-Secured-720x720.jpg","https:\/\/247artists.com\/wp-content\/uploads\/2025\/02\/Yancy-Abri-720x720.jpg","https:\/\/247artists.com\/wp-content\/uploads\/2025\/02\/Linus-Hablot-Release-Secured-720x720.jpg","https:\/\/247artists.com\/wp-content\/uploads\/2025\/02\/Kelkoe-720x720.jpg"]'>
+        data-images='[
+        "https://q4.itc.cn/q_70,c_zoom,h_1200/images01/20260119/659539b4ad6443b08433456352f0f205.jpeg",
+        "https://q2.itc.cn/q_70,c_zoom,h_1200/images01/20260119/85fb7cf899e0438aa697cecd17f280cf.jpeg",
+        "https://q2.itc.cn/q_70,c_zoom,h_1200/images01/20260119/ba3b5f2beedb4cca928da1a561fb174f.jpeg",
+        "https://q6.itc.cn/q_70,c_zoom,h_1200/images01/20260119/05705374f5054784a60fe7126c66e1b7.jpeg",
+        "https://q9.itc.cn/q_70,c_zoom,h_1200/images01/20260119/38dd2356d43f4022baac1f8e79ee34c5.jpeg",
+        "https://q8.itc.cn/q_70,c_zoom,h_1200/images01/20260119/d837a6ac677345fe86bfdce15e8746c8.jpeg",
+        "https://q8.itc.cn/q_70,c_zoom,h_1200/images01/20260119/ac4730e0c7c844f0861b57927a665b7e.jpeg",
+        "https://q7.itc.cn/q_70,c_zoom,h_1200/images01/20260119/2d435ba2ce4849899dcc2fbc80ed138a.jpeg",
+        "https://q2.itc.cn/q_70,c_zoom,h_1200/images01/20260119/bb333187fdad4cf7b47ab1fc709ed324.jpeg",
+        "https://q0.itc.cn/q_70,c_zoom,h_1200/images01/20260119/fcc339ac8cec4dd99919cbf1de2c885f.jpeg",
+        "https://q9.itc.cn/images01/20260119/6af26375586f44859cc566dd2bbe0a7c.jpeg",
+        "https://q6.itc.cn/images01/20260119/012ee08f5d614274bf4ce097a8270429.jpeg",
+        "https://q7.itc.cn/images01/20260119/e31e40353b644456a707fcde786f02d7.jpeg",
+        "https://q2.itc.cn/images01/20260119/8e3646cc4d304c7e8418ddca08b81668.jpeg",
+        "https://q3.itc.cn/images01/20260119/1adb15e760ea4625b3d4ff787e7d1ea6.jpeg",
+        "https://q5.itc.cn/images01/20260119/febd1c80897441c089d5d7c27ffd74e0.jpeg",
+        "https://q4.itc.cn/images01/20260119/49c6ad78c26f477f83e2f916102e5152.jpeg",
+        "https://q8.itc.cn/images01/20260119/d638b6fce44c49239e89d1926ee225ba.jpeg",
+        "https://q0.itc.cn/images01/20260119/5c41ee9d210a48089d65d21f482a53fd.jpeg",
+        "https://q8.itc.cn/images01/20260119/8fd14d1464a2497c81d9ab156c19ec44.jpeg",
+        "https://q1.itc.cn/images01/20260119/2e209e2818f649f9846ef1db2984e4a3.jpeg",
+        "https://q9.itc.cn/images01/20260119/55909b49428940149b8928cc59242907.jpeg",
+        "https://q3.itc.cn/images01/20260119/d35582def1034a8c9f9f38d0cdad1f45.jpeg",
+        "https://q3.itc.cn/images01/20260119/3d7821372af546099c9e968a3d0676c2.jpeg",
+        "https://q0.itc.cn/images01/20260119/1a22c939eb324d1aa1a48a17fa0e807c.jpeg",
+        "https://q7.itc.cn/images01/20260119/fde37b4fadbd45b1b8572c8b2ba1ab6f.jpeg",
+        "https://q0.itc.cn/images01/20260119/f0ec6fd5b1aa43f9b30caca078ebe83a.jpeg",
+        "https://q7.itc.cn/images01/20260119/e3ab13111fba4f0f9b1d7fc795ebe6f4.jpeg",
+        "https://q1.itc.cn/images01/20260119/489e6e895b1244dbb55a49894450c0e7.jpeg",
+        "https://q7.itc.cn/images01/20260119/21676567407443a4bb7c86a9e31873d4.jpeg",
+        "https://q1.itc.cn/images01/20260119/b447468c95984121907a1de0db7ae89e.jpeg",
+        "https://q9.itc.cn/images01/20260119/c2ecb53e0889468fbedee648d0150a19.jpeg",
+        "https://q3.itc.cn/images01/20260119/32c8408cb26c47c08d7ddd0def8e267a.jpeg",
+        "https://q4.itc.cn/images01/20260119/bb1f837bd2614383875eeae44a70ec2d.jpeg",
+        "https://q1.itc.cn/images01/20260119/63ef647fdbc44c79b9367a551c93b16c.jpeg",
+        "https://q4.itc.cn/images01/20260119/867451540b5c497da82cb63a4cc9102c.jpeg",
+        "https://q8.itc.cn/images01/20260119/6745a32abd4d4c17b2d66ad36df3d5c7.jpeg",
+        "https://q1.itc.cn/images01/20260119/27e81fba5d3a4e389a94a887becad411.jpeg",
+        "https://q6.itc.cn/images01/20260119/a729f8558d5947228c708a8d18da37cb.jpeg",
+        "https://q7.itc.cn/images01/20260119/64e6389f2411408c82c0b37821094cbe.jpeg",
+        "https://q7.itc.cn/images01/20260119/5e39c9e07bfa46b3ae4716ee76bb451c.jpeg",
+        "https://q6.itc.cn/images01/20260119/ec01b9f7e3da4a3ba447bec6a954ab7e.jpeg",
+        "https://q4.itc.cn/images01/20260119/3c43c9f1079a4b4288e73f52e2a79c73.jpeg",
+        "https://q5.itc.cn/images01/20260119/26b505bb4ccf47a4a5f7fb68bb5b9b28.png",
+        "https://q6.itc.cn/images01/20260119/6d21e0d38b0e496ab63cf03619a17c81.jpeg",
+        "https://q7.itc.cn/images01/20260119/eb31572677af4bde8bbb63c2a5dcf6a5.jpeg",
+        "https://q2.itc.cn/images01/20260119/42b90fa8ca03426db4fb8bab183ea06b.jpeg",
+        "https://q6.itc.cn/images01/20260119/fc4aa1c4041741baa3da360a7c65e19c.jpeg"
+        ]'>
         <div class="s__inner js-inner">
           <h1 class="s__title js-title">
             人生是旷野
@@ -1324,7 +1373,56 @@
       <!-- .s-faq-home -->
 
       <div class="s-cta-home" data-plr-component="s-cta-home" id="cta"
-        data-images='["https:\/\/247artists.com\/wp-content\/uploads\/2025\/02\/Kelkoe-720x720.jpg","https:\/\/247artists.com\/wp-content\/uploads\/2025\/02\/Linus-Hablot-Release-Secured-720x720.jpg","https:\/\/247artists.com\/wp-content\/uploads\/2025\/02\/Yancy-Abri-720x720.jpg","https:\/\/247artists.com\/wp-content\/uploads\/2025\/02\/Austin-Brown-Release-Secured-720x720.jpg","https:\/\/247artists.com\/wp-content\/uploads\/2025\/02\/King-Cooley-Release-Secured-720x720.jpg","https:\/\/247artists.com\/wp-content\/uploads\/2025\/02\/Trey-Kams-Release-Secured-720x720.jpeg","https:\/\/247artists.com\/wp-content\/uploads\/2025\/02\/Mannywellz-Release-Secured-720x720.jpg","https:\/\/247artists.com\/wp-content\/uploads\/2025\/02\/Kennedy-Ryon-720x720.jpg","https:\/\/247artists.com\/wp-content\/uploads\/2025\/02\/Kelle-720x720.jpg","https:\/\/247artists.com\/wp-content\/uploads\/2025\/02\/Gabrielle-Current-Release-Secured-720x720.jpg"]'>
+        data-images='[
+        "https://q4.itc.cn/q_70,c_zoom,h_1200/images01/20260119/659539b4ad6443b08433456352f0f205.jpeg",
+        "https://q2.itc.cn/q_70,c_zoom,h_1200/images01/20260119/85fb7cf899e0438aa697cecd17f280cf.jpeg",
+        "https://q2.itc.cn/q_70,c_zoom,h_1200/images01/20260119/ba3b5f2beedb4cca928da1a561fb174f.jpeg",
+        "https://q6.itc.cn/q_70,c_zoom,h_1200/images01/20260119/05705374f5054784a60fe7126c66e1b7.jpeg",
+        "https://q9.itc.cn/q_70,c_zoom,h_1200/images01/20260119/38dd2356d43f4022baac1f8e79ee34c5.jpeg",
+        "https://q8.itc.cn/q_70,c_zoom,h_1200/images01/20260119/d837a6ac677345fe86bfdce15e8746c8.jpeg",
+        "https://q8.itc.cn/q_70,c_zoom,h_1200/images01/20260119/ac4730e0c7c844f0861b57927a665b7e.jpeg",
+        "https://q7.itc.cn/q_70,c_zoom,h_1200/images01/20260119/2d435ba2ce4849899dcc2fbc80ed138a.jpeg",
+        "https://q2.itc.cn/q_70,c_zoom,h_1200/images01/20260119/bb333187fdad4cf7b47ab1fc709ed324.jpeg",
+        "https://q0.itc.cn/q_70,c_zoom,h_1200/images01/20260119/fcc339ac8cec4dd99919cbf1de2c885f.jpeg",
+        "https://q9.itc.cn/images01/20260119/6af26375586f44859cc566dd2bbe0a7c.jpeg",
+        "https://q6.itc.cn/images01/20260119/012ee08f5d614274bf4ce097a8270429.jpeg",
+        "https://q7.itc.cn/images01/20260119/e31e40353b644456a707fcde786f02d7.jpeg",
+        "https://q2.itc.cn/images01/20260119/8e3646cc4d304c7e8418ddca08b81668.jpeg",
+        "https://q3.itc.cn/images01/20260119/1adb15e760ea4625b3d4ff787e7d1ea6.jpeg",
+        "https://q5.itc.cn/images01/20260119/febd1c80897441c089d5d7c27ffd74e0.jpeg",
+        "https://q4.itc.cn/images01/20260119/49c6ad78c26f477f83e2f916102e5152.jpeg",
+        "https://q8.itc.cn/images01/20260119/d638b6fce44c49239e89d1926ee225ba.jpeg",
+        "https://q0.itc.cn/images01/20260119/5c41ee9d210a48089d65d21f482a53fd.jpeg",
+        "https://q8.itc.cn/images01/20260119/8fd14d1464a2497c81d9ab156c19ec44.jpeg",
+        "https://q1.itc.cn/images01/20260119/2e209e2818f649f9846ef1db2984e4a3.jpeg",
+        "https://q9.itc.cn/images01/20260119/55909b49428940149b8928cc59242907.jpeg",
+        "https://q3.itc.cn/images01/20260119/d35582def1034a8c9f9f38d0cdad1f45.jpeg",
+        "https://q3.itc.cn/images01/20260119/3d7821372af546099c9e968a3d0676c2.jpeg",
+        "https://q0.itc.cn/images01/20260119/1a22c939eb324d1aa1a48a17fa0e807c.jpeg",
+        "https://q7.itc.cn/images01/20260119/fde37b4fadbd45b1b8572c8b2ba1ab6f.jpeg",
+        "https://q0.itc.cn/images01/20260119/f0ec6fd5b1aa43f9b30caca078ebe83a.jpeg",
+        "https://q7.itc.cn/images01/20260119/e3ab13111fba4f0f9b1d7fc795ebe6f4.jpeg",
+        "https://q1.itc.cn/images01/20260119/489e6e895b1244dbb55a49894450c0e7.jpeg",
+        "https://q7.itc.cn/images01/20260119/21676567407443a4bb7c86a9e31873d4.jpeg",
+        "https://q1.itc.cn/images01/20260119/b447468c95984121907a1de0db7ae89e.jpeg",
+        "https://q9.itc.cn/images01/20260119/c2ecb53e0889468fbedee648d0150a19.jpeg",
+        "https://q3.itc.cn/images01/20260119/32c8408cb26c47c08d7ddd0def8e267a.jpeg",
+        "https://q4.itc.cn/images01/20260119/bb1f837bd2614383875eeae44a70ec2d.jpeg",
+        "https://q1.itc.cn/images01/20260119/63ef647fdbc44c79b9367a551c93b16c.jpeg",
+        "https://q4.itc.cn/images01/20260119/867451540b5c497da82cb63a4cc9102c.jpeg",
+        "https://q8.itc.cn/images01/20260119/6745a32abd4d4c17b2d66ad36df3d5c7.jpeg",
+        "https://q1.itc.cn/images01/20260119/27e81fba5d3a4e389a94a887becad411.jpeg",
+        "https://q6.itc.cn/images01/20260119/a729f8558d5947228c708a8d18da37cb.jpeg",
+        "https://q7.itc.cn/images01/20260119/64e6389f2411408c82c0b37821094cbe.jpeg",
+        "https://q7.itc.cn/images01/20260119/5e39c9e07bfa46b3ae4716ee76bb451c.jpeg",
+        "https://q6.itc.cn/images01/20260119/ec01b9f7e3da4a3ba447bec6a954ab7e.jpeg",
+        "https://q4.itc.cn/images01/20260119/3c43c9f1079a4b4288e73f52e2a79c73.jpeg",
+        "https://q5.itc.cn/images01/20260119/26b505bb4ccf47a4a5f7fb68bb5b9b28.png",
+        "https://q6.itc.cn/images01/20260119/6d21e0d38b0e496ab63cf03619a17c81.jpeg",
+        "https://q7.itc.cn/images01/20260119/eb31572677af4bde8bbb63c2a5dcf6a5.jpeg",
+        "https://q2.itc.cn/images01/20260119/42b90fa8ca03426db4fb8bab183ea06b.jpeg",
+        "https://q6.itc.cn/images01/20260119/fc4aa1c4041741baa3da360a7c65e19c.jpeg"
+        ]'>
         <div class="s__inner">
           <div class="s__intro js-intro">
             <div class="s__intro__text t-title js-intro-title">
