--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 </head>
 
 <body class="home wp-singular page-template-default page page-id-8 wp-theme-creatorspc">
-<audio id="bgMusic" src="login_in/link/music/盲选.mp3" loop preload="auto"></audio>
+<audio id="bgMusic" src="login_in/link/music/花.mp3" loop preload="auto"></audio>
 
   <script>
     (function () {
@@ -234,7 +234,6 @@
         "https://q7.itc.cn/images01/20260119/5e39c9e07bfa46b3ae4716ee76bb451c.jpeg",
         "https://q6.itc.cn/images01/20260119/ec01b9f7e3da4a3ba447bec6a954ab7e.jpeg",
         "https://q4.itc.cn/images01/20260119/3c43c9f1079a4b4288e73f52e2a79c73.jpeg",
-        "https://q5.itc.cn/images01/20260119/26b505bb4ccf47a4a5f7fb68bb5b9b28.png",
         "https://q6.itc.cn/images01/20260119/6d21e0d38b0e496ab63cf03619a17c81.jpeg",
         "https://q7.itc.cn/images01/20260119/eb31572677af4bde8bbb63c2a5dcf6a5.jpeg",
         "https://q2.itc.cn/images01/20260119/42b90fa8ca03426db4fb8bab183ea06b.jpeg",
@@ -1417,7 +1416,6 @@
         "https://q7.itc.cn/images01/20260119/5e39c9e07bfa46b3ae4716ee76bb451c.jpeg",
         "https://q6.itc.cn/images01/20260119/ec01b9f7e3da4a3ba447bec6a954ab7e.jpeg",
         "https://q4.itc.cn/images01/20260119/3c43c9f1079a4b4288e73f52e2a79c73.jpeg",
-        "https://q5.itc.cn/images01/20260119/26b505bb4ccf47a4a5f7fb68bb5b9b28.png",
         "https://q6.itc.cn/images01/20260119/6d21e0d38b0e496ab63cf03619a17c81.jpeg",
         "https://q7.itc.cn/images01/20260119/eb31572677af4bde8bbb63c2a5dcf6a5.jpeg",
         "https://q2.itc.cn/images01/20260119/42b90fa8ca03426db4fb8bab183ea06b.jpeg",
