--- a/login_in/index.html
+++ b/login_in/index.html
@@ -857,104 +857,111 @@
         style="position: fixed; bottom: 20px; right: 20px; width: 50px; height: 50px; cursor: pointer; z-index: 1000; transition: all 0.3s ease; border-radius: 50%; box-shadow: 0 2px 10px rgba(0,0,0,0.2);">
     <script>
         const musicFiles = [
-            '花',
-            '夜空中最亮的星.mp3',
-            '送你一朵小红花.mp3',
-            '在你的身边.mp3',
-            '谁.mp3',
-            '那女孩对我说.mp3',
-            '体面.mp3',
-            '蒲公英的约定.mp3',
-            '最好的安排.mp3',
-            '可不可以.mp3',
-            '我们俩.mp3',
-            '爱你.mp3',
-            '出现又离开.mp3',
-            '少年.mp3',
-            '最初的记忆.mp3',
-            '盲选.mp3',
-            '最好的我.mp3',
-            '去年夏天.mp3',
-            '鱼仔.mp3',
-            '飞鸟和蝉.mp3',
-            '错位时空.mp3',
-            '这世界那么多人.mp3',
-            '身骑白马.mp3',
-            '路过人间.mp3',
-            '起风了.mp3',
-            '西楼别序.mp3',
-            '若月亮还没来.mp3',
-            '船帆.mp3',
-            '终生老友.mp3',
-            '红色高跟鞋.mp3',
-            '空白格.mp3',
-            '程艾影.mp3',
-            '秋风.mp3',
-            '离开我的依赖.mp3',
-            '碎碎念.mp3',
-            '真爱的力量.mp3',
-            '生活的主义.mp3',
-            '演员.mp3',
-            '水星记.mp3',
-            '此类生物.mp3',
-            '梦返.mp3',
-            '梦中的天空.mp3',
-            '栀子花开.mp3',
-            '柳叶笺.mp3',
-            '晚安.mp3',
-            '是什么让我遇见这样的你.mp3',
-            '明天，你好.mp3',
-            '无额.mp3',
-            '无名的人.mp3',
-            '文爱.mp3',
-            '散场.mp3',
-            '搁浅.mp3',
-            '推开世界的门.mp3',
-            '所念皆星河.mp3',
-            '房间.mp3',
-            '戒不掉.mp3',
-            '我记得.mp3',
-            '我的美丽.mp3',
-            '想自由.mp3',
-            '总有一天你会出现我身边.mp3',
-            '归途有风.mp3',
-            '小半.mp3',
-            '寂寞烟火.mp3',
-            '家后.mp3',
-            '安和桥.mp3',
-            '四季予你.mp3',
-            '唯一.mp3',
-            '哪里都是你.mp3',
-            '去有风的地方.mp3',
-            '去北极忘记你.mp3',
-            '冬眠.mp3',
-            '再一次爱你.mp3',
-            '光亮.mp3',
-            '予你.mp3',
-            '不是因为寂寞才想你.mp3',
-            '不哭.mp3',
-            '一路生花.mp3',
-            '一生有你.mp3',
-            'white ferrari.mp3',
-            'what was that.mp3',
-            'summer day.mp3',
-            'sacred play secret place.mp3',
-            'reach.mp3',
-            'looking forward.mp3',
-            'let her go.mp3',
-            'every time we touch.mp3',
-            'everglow.mp3',
-            'blue dragon.mp3',
-            'WE PRAY.mp3',
-            'Trouble I’m in.mp3',
-            'The Best Is Yet to Come.mp3',
-            'Lonely Day.mp3',
-            'Kamin.mp3',
-            'III.mp3',
-            'I Really Want To Stay At Your House.mp3',
-            'Born To Live.mp3',
-            'Anyone.mp3'
+         '西楼别序'
         ];
+
+
+        //  const musicFiles = [
+        //     '茫.mp3',
+        //     '西楼别序正篇.mp3',
+        //     '如果当时.mp3',
+        //     '夜空中最亮的星.mp3',
+        //     '送你一朵小红花.mp3',
+        //     '在你的身边.mp3',
+        //     '谁.mp3',
+        //     '那女孩对我说.mp3',
+        //     '体面.mp3',
+        //     '蒲公英的约定.mp3',
+        //     '最好的安排.mp3',
+        //     '可不可以.mp3',
+        //     '我们俩.mp3',
+        //     '爱你.mp3',
+        //     '出现又离开.mp3',
+        //     '少年.mp3',
+        //     '最初的记忆.mp3',
+        //     '盲选.mp3',
+        //     '最好的我.mp3',
+        //     '去年夏天.mp3',
+        //     '鱼仔.mp3',
+        //     '飞鸟和蝉.mp3',
+        //     '错位时空.mp3',
+        //     '这世界那么多人.mp3',
+        //     '身骑白马.mp3',
+        //     '路过人间.mp3',
+        //     '起风了.mp3',
+        //     '西楼别序.mp3',
+        //     '若月亮还没来.mp3',
+        //     '船帆.mp3',
+        //     '终生老友.mp3',
+        //     '红色高跟鞋.mp3',
+        //     '空白格.mp3',
+        //     '程艾影.mp3',
+        //     '秋风.mp3',
+        //     '离开我的依赖.mp3',
+        //     '碎碎念.mp3',
+        //     '真爱的力量.mp3',
+        //     '生活的主义.mp3',
+        //     '演员.mp3',
+        //     '水星记.mp3',
+        //     '此类生物.mp3',
+        //     '梦返.mp3',
+        //     '梦中的天空.mp3',
+        //     '栀子花开.mp3',
+        //     '柳叶笺.mp3',
+        //     '晚安.mp3',
+        //     '是什么让我遇见这样的你.mp3',
+        //     '明天，你好.mp3',
+        //     '无额.mp3',
+        //     '无名的人.mp3',
+        //     '文爱.mp3',
+        //     '散场.mp3',
+        //     '搁浅.mp3',
+        //     '推开世界的门.mp3',
+        //     '所念皆星河.mp3',
+        //     '房间.mp3',
+        //     '戒不掉.mp3',
+        //     '我记得.mp3',
+        //     '我的美丽.mp3',
+        //     '想自由.mp3',
+        //     '总有一天你会出现我身边.mp3',
+        //     '归途有风.mp3',
+        //     '小半.mp3',
+        //     '寂寞烟火.mp3',
+        //     '家后.mp3',
+        //     '安和桥.mp3',
+        //     '四季予你.mp3',
+        //     '唯一.mp3',
+        //     '哪里都是你.mp3',
+        //     '去有风的地方.mp3',
+        //     '去北极忘记你.mp3',
+        //     '冬眠.mp3',
+        //     '再一次爱你.mp3',
+        //     '光亮.mp3',
+        //     '予你.mp3',
+        //     '不是因为寂寞才想你.mp3',
+        //     '不哭.mp3',
+        //     '一路生花.mp3',
+        //     '一生有你.mp3',
+        //     'white ferrari.mp3',
+        //     'what was that.mp3',
+        //     'summer day.mp3',
+        //     'sacred play secret place.mp3',
+        //     'reach.mp3',
+        //     'looking forward.mp3',
+        //     'let her go.mp3',
+        //     'every time we touch.mp3',
+        //     'everglow.mp3',
+        //     'blue dragon.mp3',
+        //     'WE PRAY.mp3',
+        //     'Trouble I’m in.mp3',
+        //     'The Best Is Yet to Come.mp3',
+        //     'Lonely Day.mp3',
+        //     'Kamin.mp3',
+        //     'III.mp3',
+        //     'I Really Want To Stay At Your House.mp3',
+        //     'Born To Live.mp3',
+        //     'Anyone.mp3'
+        // ];
 
         function getRandomMusic() {
             const randomIndex = Math.floor(Math.random() * musicFiles.length);
@@ -984,4 +991,3 @@
 </body>
 
 </html>
-
