--- a/login_in/index.html
+++ b/login_in/index.html
@@ -857,7 +857,7 @@
         style="position: fixed; bottom: 20px; right: 20px; width: 50px; height: 50px; cursor: pointer; z-index: 1000; transition: all 0.3s ease; border-radius: 50%; box-shadow: 0 2px 10px rgba(0,0,0,0.2);">
     <script>
         const musicFiles = [
-         '西楼别序'
+         '西楼别序.mp3'
         ];
 
 
