--- a/login_in/index.html
+++ b/login_in/index.html
@@ -105,62 +105,59 @@
             <div class="header-slider">
                 <div class="slider-images">
                     <div class="single-image">
-                        <img src="images/图1.webp" class="active" alt="图1">
-                        <img src="images/图2.webp" alt="图2">
-                        <img src="images/图3.webp" alt="图3">
-                        <img src="images/图4.webp" alt="图4">
-                        <img src="images/图5.webp" alt="图5">
-                        <img src="images/图6.webp" alt="图6">
-                        <img src="images/图7.webp" alt="图7">
-                        <img src="images/图8.webp" alt="图8">
-                        <img src="images/图9.webp" alt="图9">
-                        <img src="images/图10.webp" alt="图10">
-                        <img src="images/图11.webp" alt="图11">
-                        <img src="images/图12.webp" alt="图12">
-                        <img src="images/图13.webp" alt="图13">
-                        <img src="images/图14.webp" alt="图14">
-                        <img src="images/图15.webp" alt="图15">
-                        <img src="images/图16.webp" alt="图16">
-                        <img src="images/图17.webp" alt="图17">
-                        <img src="images/图18.webp" alt="图18">
-                        <img src="images/图19.webp" alt="图19">
-                        <img src="images/图20.webp" alt="图20">
-                        <img src="images/图21.webp" alt="图21">
-                        <img src="images/图22.webp" alt="图22">
-                        <img src="images/图23.webp" alt="图23">
-                        <img src="images/图24.webp" alt="图24">
-                        <img src="images/图25.webp" alt="图25">
-                        <img src="images/图26.webp" alt="图26">
-                        <img src="images/图27.webp" alt="图27">
-                        <img src="images/图28.webp" alt="图28">
-                        <img src="images/图29.webp" alt="图29">
-                        <img src="images/图30.webp" alt="图30">
-                        <img src="images/图31.webp" alt="图31">
-                        <img src="images/图32.webp" alt="图32">
-                        <img src="images/图33.webp" alt="图33">
-                        <img src="images/图34.webp" alt="图34">
-                        <img src="images/图35.webp" alt="图35">
-                        <img src="images/图36.webp" alt="图36">
-                        <img src="images/图37.webp" alt="图37">
-                        <img src="images/图38.webp" alt="图38">
-                        <img src="images/图39.webp" alt="图39">
-                        <img src="images/图40.webp" alt="图40">
-                        <img src="images/图41.webp" alt="图41">
-                        <img src="images/图42.webp" alt="图42">
-                        <img src="images/图43.webp" alt="图43">
-                        <img src="images/图44.webp" alt="图44">
-                        <img src="images/图45.webp" alt="图45">
-                        <img src="images/图46.webp" alt="图46">
-                        <img src="images/图47.webp" alt="图47">
-                        <img src="images/图48.webp" alt="图48">
-                        <img src="images/图49.webp" alt="图49">
-                        <img src="images/图50.webp" alt="图50">
-                        <img src="images/图51.webp" alt="图51">
-                        <img src="images/图52.webp" alt="图52">
-                        <img src="images/图53.webp" alt="图53">
-                        <img src="images/图54.webp" alt="图54">
-
-
+                        <img src="https://q4.itc.cn/q_70,c_zoom,h_1200/images01/20260127/b34b73ed66e94f23b730d37417f0de0f.png" class="active" alt="图1">
+                        <img src="https://q8.itc.cn/q_70,c_zoom,h_1200/images01/20260127/44c8cecf84314de0b68a62456e7a8ac2.png" alt="图2">
+                        <img src="https://q3.itc.cn/q_70,c_zoom,h_1200/images01/20260127/02f6d1a83c544ace824d389829af8585.png" alt="图3">
+                        <img src="https://q5.itc.cn/q_70,c_zoom,h_1200/images01/20260127/5b8ef0b464ac4bb1bb185c44cac0aa80.png" alt="图4">
+                        <img src="https://q5.itc.cn/q_70,c_zoom,h_1200/images01/20260127/2ef3d996ae6344958b4bf73fbd7ccfaf.jpeg" alt="图5">
+                        <img src="https://q4.itc.cn/q_70,c_zoom,h_1200/images01/20260127/6b2c291db476402d8203d307a04df37f.jpeg" alt="图6">
+                        <img src="https://q4.itc.cn/q_70,c_zoom,h_1200/images01/20260127/044d2058f33a4851abeb41cbdb659856.jpeg" alt="图7">
+                        <img src="https://q0.itc.cn/q_70,c_zoom,h_1200/images01/20260127/7c7c12f62db74e4990e2ada190a1ab84.jpeg" alt="图8">
+                        <img src="https://q2.itc.cn/q_70,c_zoom,h_1200/images01/20260127/4834771cbcba4a14bf92b4d960862c16.jpeg" alt="图9">
+                        <img src="https://q1.itc.cn/q_70,c_zoom,h_1200/images01/20260127/79a9bb87f79b4ab586b5034a2243ef19.jpeg" alt="图10">
+                        <img src="https://q9.itc.cn/q_70,c_zoom,h_1200/images01/20260127/693e5715949549b8a55bb10f9a680499.jpeg" alt="图11">
+                        <img src="https://q2.itc.cn/q_70,c_zoom,h_1200/images01/20260127/3b64b06f71644dafb01f26386385e3b4.jpeg" alt="图12">
+                        <img src="https://q1.itc.cn/q_70,c_zoom,h_1200/images01/20260127/424f9849cbe54215bdd4627675e581a8.jpeg" alt="图13">
+                        <img src="https://q4.itc.cn/q_70,c_zoom,h_1200/images01/20260127/c48b0c53d269437b90e116587604cae6.jpeg" alt="图14">
+                        <img src="https://q5.itc.cn/q_70,c_zoom,h_1200/images01/20260127/b4193cdb626d4761b44931c3184b435f.jpeg" alt="图15">
+                        <img src="https://q1.itc.cn/q_70,c_zoom,h_1200/images01/20260127/9c307b38a53f49a8bbaca1e9cd8b6b05.jpeg" alt="图16">
+                        <img src="https://q5.itc.cn/q_70,c_zoom,h_1200/images01/20260127/bde4ce975b7d4e258d919db31fc4e699.jpeg" alt="图17">
+                        <img src="https://q3.itc.cn/q_70,c_zoom,h_1200/images01/20260127/b0224d91d15845409a0f5d075796fdf4.jpeg" alt="图18">
+                        <img src="https://q2.itc.cn/q_70,c_zoom,h_1200/images01/20260127/22f11bdc2b814e03a044a356964e6d75.jpeg" alt="图19">
+                        <img src="https://q8.itc.cn/q_70,c_zoom,h_1200/images01/20260127/f544186f83354fb4a5d77279869002d6.jpeg" alt="图20">
+                        <img src="https://q3.itc.cn/q_70,c_zoom,h_1200/images01/20260127/e65e5d4b6e274428b20ef51e03b123e5.jpeg" alt="图21">
+                        <img src="https://q1.itc.cn/q_70,c_zoom,h_1200/images01/20260127/041fb92fbcaa47f085049eed12aee646.jpeg" alt="图22">
+                        <img src="https://q9.itc.cn/q_70,c_zoom,h_1200/images01/20260127/7b60c42ad9bc45c1909d8ac3e8c531f9.jpeg" alt="图23">
+                        <img src="https://q5.itc.cn/q_70,c_zoom,h_1200/images01/20260127/31404eb0eec344ad8acee45d1e16548c.jpeg" alt="图24">
+                        <img src="https://q6.itc.cn/q_70,c_zoom,h_1200/images01/20260127/c425ffe6875f42a3810798613f010d74.jpeg" alt="图25">
+                        <img src="https://q2.itc.cn/q_70,c_zoom,h_1200/images01/20260127/d786e590df1e42008205f0485ec4eb70.jpeg" alt="图26">
+                        <img src="https://q8.itc.cn/q_70,c_zoom,h_1200/images01/20260127/85004ce2511a441f859d81098c0c1bee.jpeg" alt="图27">
+                        <img src="https://q1.itc.cn/q_70,c_zoom,h_1200/images01/20260127/d35db3a593be492ba591fa16c3dda338.jpeg" alt="图28">
+                        <img src="https://q3.itc.cn/q_70,c_zoom,h_1200/images01/20260127/66260407943546bea8b2118d8bc403d0.jpeg" alt="图29">
+                        <img src="https://q4.itc.cn/q_70,c_zoom,h_1200/images01/20260127/72ec67925a6546fabba502ffdfa863d5.jpeg" alt="图30">
+                        <img src="https://q5.itc.cn/q_70,c_zoom,h_1200/images01/20260127/d8456b3e3e234b38a567360ebae06159.jpeg" alt="图31">
+                        <img src="https://q8.itc.cn/q_70,c_zoom,h_1200/images01/20260127/604d840bc0504ed9afa62393fbe3ab0a.jpeg" alt="图32">
+                        <img src="https://q8.itc.cn/q_70,c_zoom,h_1200/images01/20260127/611a03a1c45344f38e8a2ed7f6895437.jpeg" alt="图33">
+                        <img src="https://q5.itc.cn/q_70,c_zoom,h_1200/images01/20260127/884e6dfd8e6a49d297050015b4847b93.jpeg" alt="图34">
+                        <img src="https://q7.itc.cn/q_70,c_zoom,h_1200/images01/20260127/d7e3fb2f498549bea5d9c90084ff0946.jpeg" alt="图35">
+                        <img src="https://q4.itc.cn/q_70,c_zoom,h_1200/images01/20260127/9510d330d43c46089dcf72836ded5eca.jpeg" alt="图36">
+                        <img src="https://q7.itc.cn/q_70,c_zoom,h_1200/images01/20260127/1d95455a76d941f7a17c6e7366fb942a.jpeg" alt="图37">
+                        <img src="https://q0.itc.cn/q_70,c_zoom,h_1200/images01/20260127/a13707faeb894c7aafa60f674df43517.jpeg" alt="图38">
+                        <img src="https://q6.itc.cn/q_70,c_zoom,h_1200/images01/20260127/3eb274cbcfd34a93a7c98fa815006c15.jpeg" alt="图39">
+                        <img src="https://q1.itc.cn/q_70,c_zoom,h_1200/images01/20260127/5a3aba47ddbf42e39f2a10c4728b8805.jpeg" alt="图40">
+                        <img src="https://q4.itc.cn/q_70,c_zoom,h_1200/images01/20260127/23230a7b6372406d8944ebfc4dcde7f7.jpeg" alt="图41">
+                        <img src="https://q7.itc.cn/q_70,c_zoom,h_1200/images01/20260127/92798c404a0b49b7851e7c610073be85.jpeg" alt="图42">
+                        <img src="https://q3.itc.cn/q_70,c_zoom,h_1200/images01/20260127/cfad5761bb6145759f99af1dc7cd18de.jpeg" alt="图43">
+                        <img src="https://q3.itc.cn/q_70,c_zoom,h_1200/images01/20260127/edf8e3adaafc464ea26f5fc703a15362.jpeg" alt="图44">
+                        <img src="https://q1.itc.cn/q_70,c_zoom,h_1200/images01/20260127/a712481915ed419e86f638e21d22bacd.jpeg" alt="图45">
+                        <img src="https://q0.itc.cn/q_70,c_zoom,h_1200/images01/20260127/0d548c054b6740caaa29f4b286b0178c.jpeg" alt="图46">
+                        <img src="https://q1.itc.cn/q_70,c_zoom,h_1200/images01/20260127/bb580e535b2c48078ca8bb497729ba7e.jpeg" alt="图47">
+                        <img src="https://q2.itc.cn/q_70,c_zoom,h_1200/images01/20260127/4f7f9545c62c450a9cdd5f0f2f2a0692.jpeg" alt="图48">
+                        <img src="https://q4.itc.cn/q_70,c_zoom,h_1200/images01/20260127/8a2468f77cd24ed6a608650f17be02e4.jpeg" alt="图49">
+                        <img src="https://q6.itc.cn/q_70,c_zoom,h_1200/images01/20260127/ed7712977da842aba805475a4b91426d.jpeg" alt="图50">
+                        <img src="https://q1.itc.cn/q_70,c_zoom,h_1200/images01/20260127/fd49cca229d247c8a4f8a817ba2733f9.jpeg" alt="图51">
+                        <img src="https://q5.itc.cn/q_70,c_zoom,h_1200/images01/20260127/5fc1c1e2de824560ba87bb6e498158fa.jpeg" alt="图52">
+                        <img src="https://q2.itc.cn/q_70,c_zoom,h_1200/images01/20260127/e5597f24003b4dd3a2533cfb236aaa62.jpeg" alt="图53">
                     </div>
                 </div>
             </div>
@@ -413,7 +410,7 @@
             <div id="portfolio-content">
                 <div class="portfolio portfolio-first">
                     <div class="portfolio-image">
-                        <img src="images/portfolio-first.jpg" alt="portfolio-first">
+                        <img src="https://q5.itc.cn/q_70,c_zoom,h_1200/images01/20260127/ddffca6ebbf04f469f0721c670eb58b2.jpeg" alt="portfolio-first">
                     </div>
                     <div class="portfolio-text">
                         <h2>科技日常</h2>
@@ -424,7 +421,7 @@
                 </div>
                 <div class="portfolio portfolio-second">
                     <div class="portfolio-image">
-                        <img src="images/portfolio-second.jpg" alt="portfolio-second">
+                        <img src="https://q3.itc.cn/q_70,c_zoom,h_1200/images01/20260127/39addef6211d435aa5e2dc470c80f166.jpeg" alt="portfolio-second">
                     </div>
                     <div class="portfolio-text">
                         <h2>思绪日常</h2>
@@ -436,7 +433,7 @@
 
                 <div class="portfolio portfolio-third">
                     <div class="portfolio-image">
-                        <img src="images/portfolio-third.jpg" alt="portfolio-third">
+                        <img src="https://q8.itc.cn/q_70,c_zoom,h_1200/images01/20260127/11a722795c464e03aa288ae94ebdbeb3.jpeg" alt="portfolio-third">
                     </div>
                     <div class="portfolio-text">
                         <h2>行走日常</h2>
@@ -447,7 +444,7 @@
                 </div>
                 <div class="portfolio portfolio-fourth">
                     <div class=" portfolio-image">
-                        <img src="images/portfolio-fourth.jpg" alt="portfolio-fourth">
+                        <img src="https://q4.itc.cn/q_70,c_zoom,h_1200/images01/20260127/37d51e1d6c664ad5ac0514501896f900.jpeg" alt="portfolio-fourth">
                     </div>
                     <div class="portfolio-text">
                         <h2>阅读日常</h2>
@@ -526,7 +523,7 @@
                 <div class="blogs">
                     <a href="./image_fancy/index.html" target="_blank">
                         <div class="img">
-                            <img src="images/post-one.webp" alt="blog-one">
+                            <img src="https://q6.itc.cn/q_70,c_zoom,h_1200/images01/20260127/d095fff979a24bf48e803c2b08ff8358.png" alt="blog-one">
                             <div class="blog-date">浪漫</div>
                         </div>
                         <div class="blog-text">
@@ -543,7 +540,7 @@
                 <div class="blogs">
                     <a href="./lovestory/index.html" target="_blank">
                         <div class="img">
-                            <img src="images/post-two.webp" alt="blog-two">
+                            <img src="https://q5.itc.cn/q_70,c_zoom,h_1200/images01/20260127/ba002b648e304ec99b0128c1947f75b7.png" alt="blog-two">
                             <div class="blog-date">浪漫</div>
                         </div>
                         <div class="blog-text">
@@ -559,7 +556,7 @@
                 <div class="blogs">
                     <a href="./travel_plane/index.html" target="_blank">
                         <div class="img">
-                            <img src="images/post-three.webp" alt="blog-three">
+                            <img src="https://q5.itc.cn/q_70,c_zoom,h_1200/images01/20260127/7ed4cab2b4db4feb808bea51bc3ff6cc.png" alt="blog-three">
                             <div class="blog-date">浪漫</div>
                         </div>
                         <div class="blog-text">
@@ -578,7 +575,7 @@
                 <div class="blogs">
                     <a href="./video_and_audio/video.html" target="_blank">
                         <div class="img">
-                            <img src="images/post-four.webp" alt="blog-four">
+                            <img src="https://q3.itc.cn/q_70,c_zoom,h_1200/images01/20260127/e14b78b8dbab4d639ffa2b2e5f30bd46.png" alt="blog-four">
                             <div class="blog-date">实用</div>
                         </div>
                         <div class="blog-text">
@@ -646,7 +643,7 @@
                 <div class="blogs">
                     <a href="./link/test.html" target="_blank">
                         <div class="img">
-                            <img src="images/post-five.jpg" alt="blog-six">
+                            <img src="https://q6.itc.cn/q_70,c_zoom,h_1200/images01/20260127/4aef08e923554be79ac9096eb078cb7f.jpeg" alt="blog-six">
                             <div class="blog-date">专属位</div>
                         </div>
                         <div class="blog-text">
