--- a/login_in/lovestory/index.html
+++ b/login_in/lovestory/index.html
@@ -10,7 +10,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
 
   <link rel="icon" href="../images/favicon.jpg" type="image/x-icon">
-  <link rel="stylesheet" href="all.min.css" />
+  <link rel="stylesheet" href="all.min.css?v=20260129" />
   <link rel="stylesheet" href="mobile-fixes.css" />
 
   <script>
@@ -412,6 +412,13 @@
       const video = document.getElementById("bg-video");
       audio.volume = 0.5;
 
+      if (video) {
+        video.addEventListener("error", function () {
+          video.style.display = "none";
+          document.body.style.background = "#000 url(img/iali0.jpg) center / cover no-repeat";
+        });
+      }
+
       const isSmallScreen = window.matchMedia && window.matchMedia("(max-width: 768px)").matches;
       const isTouch = ("ontouchstart" in window) || (navigator.maxTouchPoints && navigator.maxTouchPoints > 0);
       if (isSmallScreen || isTouch) {
@@ -438,11 +445,16 @@
           .play()
           .then(() => {
             // 开始页面动画/效果
-            FT.init();
+            if (window.Flowtime && typeof window.Flowtime.start === "function") {
+              window.Flowtime.start();
+            }
           })
           .catch((e) => {
             console.log("播放失败:", e);
             document.querySelector(".mPower").style.display = "block";
+            if (window.Flowtime && typeof window.Flowtime.start === "function") {
+              window.Flowtime.start();
+            }
           });
       });
     });
@@ -450,7 +462,7 @@
 
   <script src="jquery.min.js" tppabs="http://libs.baidu.com/jquery/1.8.3/jquery.min.js"></script>
   <script src="all.min.js"></script>
-  <script src="love.min.js"></script>
+  <script src="lovestory.js"></script>
   <script>
     document.addEventListener("keydown", function (e) {
       if (e.key === "Escape") {
